--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  outline: 0;
+}
+
+.App {
+  font-family: sans-serif;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+}
+.error {
+  /* background-color: rgba(247, 26, 26, 0.808); */
+  /* color: rgba(255, 255, 255, 0.781); */
+
+  background-color: palevioletred;
+  color: white;
+  border: 1px solid #e4e6e8;
+
+  min-width: 50%;
+  width: 50%;
+  margin: 0 auto;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  text-align: center;
+}
+.error:hover {
+  background-color: rgb(236, 112, 147);
+}
+input {
+  display: block;
+  min-width: 50%;
+  margin: 1em;
+  padding: 1em;
+  margin: 1rem auto;
+  width: 35em;
+  border-radius: 4px;
+  border-style: none;
+  border: 1px solid #e4e6e8;
+  transition: 0.1s ease;
+}
+
+input:hover {
+  border-color: palevioletred;
+}
+
+button {
+  margin: 0.8em auto;
+  display: block;
+  text-align: center;
+  padding: 1em;
+  border: 1px solid #e4e6e8;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.1s ease-in;
+}
+
+button:hover {
+  background-color: palevioletred;
+  color: white;
+}
+p {
+  text-align: center;
 }
